test news classification

--- a/training_scripts/wiki/telugu-sentencepiece-tokenizer.ipynb
+++ b/training_scripts/wiki/telugu-sentencepiece-tokenizer.ipynb
@@ -4,17 +4,26 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip -q install inltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/kaggle/input/telugu-wikipedia-dataset/__output__.json\n",
-      "/kaggle/input/telugu-wikipedia-dataset/custom.css\n",
       "/kaggle/input/telugu-wikipedia-dataset/__results__.html\n",
-      "/kaggle/input/telugu-wikipedia-dataset/telugu_wiki_links.csv\n",
+      "/kaggle/input/telugu-wikipedia-dataset/custom.css\n",
       "/kaggle/input/telugu-wikipedia-dataset/__notebook__.ipynb\n",
-      "/kaggle/input/telugu-wikipedia-dataset/telugu_wikipedia_dataset.parquet\n"
+      "/kaggle/input/telugu-wikipedia-dataset/telugu_wikipedia_dataset.parquet\n",
+      "/kaggle/input/telugu-wikipedia-dataset/telugu_wiki_links.csv\n",
+      "/kaggle/input/telugu-wikipedia-dataset/__output__.json\n"
      ]
     }
    ],
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +63,7 @@
        "((99052, 2), Index(['title', 'text'], dtype='object'))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -124,33 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "tel_path = os.path.join(working_path, 'TeluguWikiSentences.txt')\n",
     "with open(tel_path, 'w') as f:\n",
     "    f.write('\\n'.join(sentences))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spm.SentencePieceTrainer.Train(f'--input={tel_path} --model_prefix=telugu_tok --vocab_size=25000')"
    ]
   },
   {
@@ -170,13 +159,33 @@
     }
    ],
    "source": [
+    "spm.SentencePieceTrainer.Train(f'--input={tel_path} --model_prefix=telugu_tok --vocab_size=25000')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "sp = spm.SentencePieceProcessor()\n",
     "sp.Load(\"telugu_tok.model\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
